# rswag-online

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  index.html  nginx.conf
.gitea/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_stripe_to_mollie.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: __init__.py  cart.py  checkout.py  design_generator.py  designs.py  dither.py  health.py  orders.py  products.py  spaces.py  upload.py  webhooks.py
backend/app/api/admin/: __init__.py  analytics.py  auth.py  orders.py  products.py
backend/app/models/: __init__.py  admin.py  cart.py  customer.py  order.py  product.py
backend/app/pod/: printful_client.py  prodigi_client.py
backend/app/schemas/: __init__.py  cart.py  design.py  dither.py  order.py  product.py
backend/app/services/: analytics_service.py  auth_service.py  cart_service.py  design_service.py  dither_service.py  email_service.py  flow_service.py  mollie_service.py  order_service.py  space_service.py
backlog/: config.yml
backlog/tasks/: task-1 - Configure-Mollie-API-key-for-production-payments.md  task-10 - Consistent-rApp-header-bar-with-AppSwitcher-SpaceSwitcher.md  (+10 more)
config/: products.yaml
frontend/: Dockerfile  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  (+2 more)
landing/: docker-compose.yml  index.html
(+21 files in other folders)
